# ics_agActor

./: .gitignore  CHANGELOG.md  README.md  SConstruct  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pip-install.yml
etc/: ag.cfg
python/agActor/: __init__.py  _gen2_gaia.py  _gen2_gaia_annulus.py  actorCalls.py  agcam.py  agcc.py  astrometry.py  autoguide.py  base.py  coordinates.py  data_utils.py  det2dp.py  det2fp.py  field_acquisition.py  field_acquisition_otf.py  focus.py  gen2.py  gen2_gaia.py  main.py  mlp1.py  opdb.py  pfs_design.py  subaru.py  telescope_center.py  to_altaz.py  utils.py
python/agActor/Commands/: AgCmd.py
python/agActor/Controllers/: ag.py
python/agActor/catalog/: astrometry.py  gen2_gaia.py  pfs_design.py
python/agActor/connectors/: agcc.py  base.py  gen2.py  mlp1.py
python/agActor/coordinates/: FieldAcquisitionAndFocusing.py  Subaru_POPT2_PFS_AG.py
python/agActor/kawanomoto/: FieldAcquisition.py  FieldAcquisitionAndFocusing.py  PFSWCS.py  Subaru_POPT2_HSC.py  Subaru_POPT2_PFS.py  Subaru_POPT2_PFS_AG.py  __init__.py
python/agActor/models/: agcc.py  gen2.py  mlp1.py
python/agActor/utils/: actorCalls.py  data.py  data_utils.py  focus.py  logging.py  math.py  opdb.py  subaru.py  telescope_center.py  to_altaz.py
tests/: test_field_acquisition.ipynb  test_utils_data.ipynb  test_version.py
ups/: ics_agActor.table
