[build-system]
requires = ["setuptools >= 77.0.3", "lsst-versions"]
build-backend = "setuptools.build_meta"

[project]
name = "ics-ag-actor"
description = "ICS actor for the Auto Guider"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "PFS Collaboration" }
keywords = ["astronomy", "spectrograph", "subaru", "pfs", "autoguider"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy >= 5.0",
    "fitsio",
    "numpy >= 2.0",
    "pfs-datamodel @ git+https://github.com/Subaru-PFS/datamodel.git",
    "pfs-tron-actorcore @ git+https://github.com/Subaru-PFS/tron_actorcore.git",
    "pfs-utils @ git+https://github.com/Subaru-PFS/pfs_utils.git",
    "pfs-ics-utils @ git+https://github.com/Subaru-PFS/ics_utils.git",
    "psycopg2-binary",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/Subaru-PFS/ics_agActor"
"Bug Tracker" = "https://github.com/Subaru-PFS/ics_agActor/issues"
"Changelog" = "https://github.com/Subaru-PFS/ics_agActor/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
]

[tool.setuptools.packages.find]
where = ["python/"]
include = ["agActor", "agActor.*"]

[tool.lsst_versions]
write_to = "python/agActor/version.py"

[tool.black]
line-length = 110
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 110
known_first_party = ["agActor"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
