[build-system]
requires = ["setuptools >= 77.0.3", "wheel", "lsst-versions"]
build-backend = "setuptools.build_meta"

[project]
name = "ics-ag-actor"
description = "ICS actor for the Auto Guider"
authors = [
    { name = "Subaru PFS ICS Team" }
]
readme = "README.md"
license = { text = "PFS Collaboration" }
requires-python = ">=3.12"
keywords = ["astronomy", "spectrograph", "subaru", "pfs", "autoguider"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy >= 5.0",
    "fitsio",
    "numpy >= 2.0",
    "pfs-datamodel @ git+https://github.com/Subaru-PFS/datamodel.git",
    "pfs-tron-actorcore @ git+https://github.com/Subaru-PFS/tron_actorcore.git",
    "pfs-utils @ git+https://github.com/Subaru-PFS/pfs_utils.git",
    "ics-utils @ git+https://github.com/Subaru-PFS/ics_utils.git",
    "psycopg2-binary",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/Subaru-PFS/ics_agActor"
"Bug Tracker" = "https://github.com/Subaru-PFS/ics_agActor/issues"
"Changelog" = "https://github.com/Subaru-PFS/ics_agActor/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "black",
    "ipykernel",
    "isort",
    "nbval",
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["python/"]
include = ["agActor", "agActor.*"]

[tool.lsst_versions]
write_to = "python/agActor/version.py"

[tool.black]
line-length = 110
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 110
known_first_party = ["agActor"]

[tool.pytest.ini_options]
addopts = "-ra --import-mode=importlib --cov=agActor --cov-report=term-missing --nbval"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Ruff configuration to ignore naming capitalization/camelCase rules for functions, methods, and variables
[tool.ruff.lint]
ignore = ["N802", "N803", "N806", "N815", "N816", "EM101", "TRY003"]

[tool.pydocstyle]
convention = "numpy"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.hatch-test]
# Use the project optional dependency group `dev` so pytest and friends are installed
features = ["dev"]
# Pin to the project's supported Python by default; hatch will still choose a compatible interpreter
python = "3.12"
# Explicit test command; additional args from `hatch test` are passed through as `{args}`
[tool.hatch.envs.hatch-test.test]
command = "pytest"
